发请求出问题了

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -12,7 +12,7 @@
           <view class="weui-label">用户名</view>
         </view>
         <view class="weui-cell__bd">
-          <input class="weui-input" type="text" placeholder="请输入用户名" />
+          <input class="weui-input" type="text" value="{{username}}" placeholder="请输入用户名" bindinput="bindUsernameInput"/>
         </view>
       </view>
 
@@ -21,13 +21,13 @@
           <view class="weui-label">密码</view>
         </view>
         <view class="weui-cell__bd">
-          <input class="weui-input" type="password" placeholder="请输入密码" />
+          <input class="weui-input" type="password" value="{{password}}" placeholder="请输入密码" bindinput="bindPasswordInput"/>
         </view>
       </view>
     </view>
 
     <view class="weui-btn-area">
-      <button class="weui-btn" type="primary" bindtap="showTopTips">登录</button>
+      <button class="weui-btn" type="primary" bindtap="loginFn">登录</button>
     </view>
   </view>
 </view>
